--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "dev": "nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "colors": "^1.4.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mongoose": "^8.15.1",
     "path": "^0.12.7"
   }
 }
