--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.3",
   "description": "",
   "main": "server/server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
-    "dev": "nodemon server/server.js"
-  },
+"scripts": {
+  "start": "node server/server.js",
+  "dev": "concurrently \"npm run server\" \"npm run client\"",
+  "server": "nodemon server/server.js",
+  "client": "npm run dev --prefix client",
+  "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+},
+
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -19,5 +22,8 @@
     "mongoose": "^8.15.1",
     "path": "^0.12.7",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2"
   }
 }
