--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "framer-motion": "^12.18.1",
     "mongoose": "^8.15.1",
     "path": "^0.12.7",
     "uuid": "^11.1.0",
