--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "framer-motion": "^12.18.1",
     "globals": "^16.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
