--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,20 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.18.1",
     "globals": "^16.0.0",
+    "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.517.0",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.6.2",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.10",
     "vite": "^6.3.5"
