--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@azure/msal-browser": "^4.13.1",
     "@azure/msal-react": "^3.0.12",
     "@eslint/js": "^9.25.0",
+    "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.10",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.517.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
